--- a/fuentes/visuales/grado06/guion02/guionAbierto/CS_06_02_CO_Recurso010/Alumno.html
+++ b/fuentes/visuales/grado06/guion02/guionAbierto/CS_06_02_CO_Recurso010/Alumno.html
@@ -1,22 +1,16 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<!-- v : 10.10.8 -->
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-	
-	
-	<title></title>
-	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-	
-	<SCRIPT SRC='../_js/common.js'></SCRIPT>			
-	
-	<link rel="stylesheet" type="text/css" href="../_css/common.css" />
-	
-</head>
-<body>
+	<head>
+		<title></title>
+		<meta content="text/html; charset=iso-8859-1" http-equiv="Content-Type" />
+		<SCRIPT SRC='../_js/common.js'></SCRIPT>
+		<link href="../_css/common.css" rel="stylesheet" type="text/css" />
+	</head>
+	<body>
 		<p class="cabecera2">
 			Los or&iacute;genes de la humanidad</p>
 		<p class="normal">
-			La <span class="negrita">hominizaci&oacute;n </span>es el largo proceso por el cual un grupo de primates fue evolucionando lentamente hasta llegar a los seres humanos de hoy. Este proceso comenz&oacute; hace unos 6 millones de a&ntilde;os, aunque los primeros hom&iacute;nidos no aparecen hasta hace m&aacute;s de 3 millones de a&ntilde;os.</p>
+			La hominizaci&oacute;n es el largo proceso de evoluci&oacute;n de los primates hasta llegar a los seres humanos de hoy. Este proceso comenz&oacute; hace unos 6 millones de a&ntilde;os, aunque los primeros hom&iacute;nidos no aparecen hasta hace m&aacute;s de 3 millones de a&ntilde;os.</p>
 		<p class="normal">
 			Los principales cambios biol&oacute;gicos que determinaron la aparici&oacute;n de los hom&iacute;nidos fueron:</p>
 		<p class="tab1">
@@ -24,31 +18,42 @@
 		<p class="tab1">
 			- Bipedismo.</p>
 		<p class="tab1">
+			- Postura erguida.</p>
+		<p class="tab1">
+			- Dedo pulgar oponente.</p>
+		<p class="tab1">
 			- Aparici&oacute;n del lenguaje.</p>
 		<p class="cabecera2">
 			Los hom&iacute;nidos</p>
 		<p class="normal">
-			La evoluci&oacute;n de los hom&iacute;nidos no fue lineal, sino que&nbsp;coexisteron distintas especies de hom&iacute;nidos al mismo tiempo, as&iacute; como otras dieron paso a otras nuevas. Las especies m&aacute;s importantes fueron:</p>
+			La evoluci&oacute;n de los hom&iacute;nidos no fue lineal, sino que coexistieron distintas especies de estos al mismo tiempo, as&iacute; como otras dieron paso a unas nuevas. Una de las especies m&aacute;s importantes fue el <span class="cursiva"><span class="negrita">Australopithecus</span></span>, que data de hace unos 3,5 millones de a&ntilde;os en &Aacute;frica, porque adoptaron la posici&oacute;n b&iacute;peda y se extinguieron hace aproximadamente 900.000 a&ntilde;os.</p>
+		<p class="normal">
+			El g&eacute;nero <span class="cursiva">Homo</span> contin&uacute;a su evoluci&oacute;n hasta el <span class="cursiva">Homo sapiens sapiens</span> cuyas caracter&iacute;sticas f&iacute;sicas corresponden a los humanos modernos:</p>
 		<p class="tab1">
-			- <span class="cursiva"><span class="negrita">Australopithecus</span></span>: apareci&oacute; hace unos&nbsp;3,5 millones de a&ntilde;os en &Aacute;frica. Adoptaron la posici&oacute;n b&iacute;peda.</p>
+			- <span class="cursiva"><span class="negrita">Homo habilis</span></span>: es el primer representante del g&eacute;nero <span class="cursiva">Homo</span>. Data de hace unos 2,5 millones de a&ntilde;os. Su capacidad craneal era mayor que la de los <span class="cursiva">Australopithecus</span> y fueron los primeros en utilizar herramientas.</p>
 		<p class="tab1">
-			- <span class="cursiva"><span class="negrita">Homo habilis</span></span>: es el primer representante del g&eacute;nero <span class="cursiva">Homo</span>. Apareci&oacute; hace unos&nbsp;2,5 millones de&nbsp;a&ntilde;os. Su capacidad craneal era mayor que la de los <span class="cursiva">australopithecus </span>y fueron los primeros en utilizar herramientas.</p>
+			- <span class="cursiva"><span class="negrita">Homo erectus</span></span>: data de hace unos 1,7 millones de a&ntilde;os. Descubri&oacute; el fuego, trabajaba y tallaba la piedra.</p>
 		<p class="tab1">
-			<span class="negrita">- <span class="cursiva">Homo erectus</span></span>: apareci&oacute; hace unos 1,7 millones de a&ntilde;os.&nbsp;Descubri&oacute; el fuego y trabajaba y tallaba la piedra.</p>
+			- <span class="cursiva"><span class="negrita">Homo neanderthalensis</span></span>: vivi&oacute; aproximadamente entre el 120.000 y el 35.000 a.C. Se extendi&oacute; por Europa, Asia y Oriente Medio. Su morfolog&iacute;a se adaptaba a las duras condiciones clim&aacute;ticas de la &eacute;poca glacial. Convivi&oacute; durante un tiempo con los <span class="cursiva">Homo sapiens</span>.</p>
 		<p class="tab1">
-			- <span class="cursiva"><span class="negrita">Homo neanderthalensis</span></span>: vivi&oacute; aproximadamente entre el 120000 y el 35000 a.C. Se extendi&oacute; por Europa, Asia y Oriente Medio.&nbsp;Su morfolog&iacute;a se adaptaba a las duras condiciones clim&aacute;ticas de la &eacute;poca glacial. Convivi&oacute; durante un tiempo con los <span class="cursiva">Homo sapiens</span>.</p>
-		<p class="tab1">
-			- <span class="cursiva"><span class="negrita">Homo sapiens</span></span>: apareci&oacute; hace unos&nbsp;100.000 a&ntilde;os en &Aacute;frica y se extendi&oacute; por toda la Tierra sin mezclarse con otras especies del g&eacute;nero <span class="cursiva">Homo</span>. Fabricaba utensilios y herramientas de piedra.</p>
+			- <span class="cursiva"><span class="negrita">Homo sapiens</span></span>: apareci&oacute; hace unos 100.000 a&ntilde;os en &Aacute;frica y se extendi&oacute; por toda la Tierra sin mezclarse con otras especies del g&eacute;nero <span class="cursiva">Homo</span>. Fabricaba utensilios y herramientas de piedra.</p>
 		<div class="destacado">
-			Si est&aacute;s interesado en conocer m&aacute;s sobre el proceso de hominizaci&oacute;n te recomendamos visitar la p&aacute;gina Claves de la evoluci&oacute;n humana, dirigida por Juan Luis Arsuaga [<a href="http://ntic.educacion.es/w3//eos/MaterialesEducativos/mem/claves_evolucion_/index.html" target="_blank">ver</a>].</div>
+			Si est&aacute;s interesado en conocer m&aacute;s sobre el proceso de hominizaci&oacute;n te recomendamos visitar la p&aacute;gina Claves de la evoluci&oacute;n humana, dirigida por Juan Luis Arsuaga <a href="http://ntic.educacion.es/w3/eos/MaterialesEducativos/mem/claves_evolucion_/index.html" target="_blank">[VER]</a>.</div>
 		<p class="cabecera2">
-			Vocabulario del v&iacute;deo</p>
+			Vocabulario del video</p>
 		<p class="tab1">
-			- <span class="negrita">Primates</span>: son mam&iacute;feros placentarios, en su mayor&iacute;a arbor&iacute;colas, descendientes de los insect&iacute;voros. Entre sus rasgos m&aacute;s destacados encontramos los pulgares oponibles al resto de dedos&nbsp;y la capacidad de mantenerse en posici&oacute;n erguida.</p>
+			- <span class="negrita">Primates</span>: son mam&iacute;feros placentarios, en su mayor&iacute;a arbor&iacute;colas, descendientes de los insect&iacute;voros. Entre sus rasgos m&aacute;s destacados encontramos los pulgares oponentes al resto de dedos y la capacidad de mantenerse en posici&oacute;n erguida.</p>
 		<p class="tab1">
-			- <span class="negrita">Primates prosimios</span>:&nbsp;son las formas de primates m&aacute;s antiguas. Los loris y l&eacute;mures son sus &uacute;nicos representantes vivos.</p>
+			- <span class="negrita">Primates prosimios</span>: son las formas de primates m&aacute;s antiguas. Los loris y l&eacute;mures son sus &uacute;nicos representantes vivos.</p>
 		<p class="tab1">
-			- <span class="negrita">Primates antropoides</span>: pertenecen al suborden <span class="cursiva">Antropoidea.&nbsp;</span>Entre sus miembros&nbsp;se incluyen los monos, los antropomorfos y el ser humano.</p>
+			- <span class="negrita">Primates antropoides</span>: pertenecen al suborden Antropoidea. Entre sus miembros se incluyen los monos, los antropomorfos y el ser humano.</p>
 		<p class="tab1">
-			- <span class="negrita">P&oacute;ngidos</span>: son primates de&nbsp;la familia <span class="cursiva">Pongidae</span>.&nbsp;Viven en las zonas boscosas de &Aacute;frica y Asia. Entre sus miembros se encuentran los orangutanes, los gorilas, los chimpanc&eacute;s y los bonobos.</p>
-	</body></html>
+			- <span class="negrita">P&oacute;ngidos</span>: son primates de la familia Pongidae. Viven en las zonas boscosas de &Aacute;frica y Asia. Entre sus miembros se encuentran los orangutanes, los gorilas, los chimpanc&eacute;s y los bonobos.</p>
+		<p>
+			&nbsp;</p>
+		<p>
+			&nbsp;</p>
+		<p>
+			&nbsp;</p>
+	</body>
+</html>
