--- a/fuentes/visuales/grado06/guion02/guionAbierto/CS_06_02_CO_Recurso010/Profesor.html
+++ b/fuentes/visuales/grado06/guion02/guionAbierto/CS_06_02_CO_Recurso010/Profesor.html
@@ -1,50 +1,47 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<!-- v : 10.10.8 -->
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-	
-	
-	<title></title>
-	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-	
-	<SCRIPT SRC='../_js/common.js'></SCRIPT>			
-	
-	<link rel="stylesheet" type="text/css" href="../_css/common.css" />
-	
-</head>
-<body>
+	<head>
+		<title></title>
+		<meta content="text/html; charset=iso-8859-1" http-equiv="Content-Type" />
+		<SCRIPT SRC='../_js/common.js'></SCRIPT>
+		<link href="../_css/common.css" rel="stylesheet" type="text/css" />
+	</head>
+	<body>
 		<p class="cabecera1">
+			El proceso de hominizaci&oacute;n</p>
+		<p class="cabecera2">
 			Objetivo</p>
 		<p class="normal">
-			El siguiente v&iacute;deo permite mostrar a grandes rasgos en qu&eacute; consisti&oacute; el proceso de hominizaci&oacute;n y c&oacute;mo surgieron distintas especies y g&eacute;neros, entre los que nos encontramos los humanos.</p>
-		<p class="cabecera1">
-			Propuesta</p>
+			El video permite realizar un recorrido por el proceso de hominizaci&oacute;n, el surgimiento de las distintas especies y g&eacute;neros.</p>
 		<p class="cabecera2">
-			Antes del visionado</p>
+			Antes de la presentaci&oacute;n</p>
 		<p class="normal">
-			Como paso previo a la explicaci&oacute;n, te sugerimos realizar una serie de preguntas para que los alumnos expliquen qu&eacute; idea tienen sobre el proceso de hominizaci&oacute;n:</p>
+			Le sugerimos realizar las siguientes preguntas para que los estudiantes expresen sus ideas sobre el proceso de hominizaci&oacute;n:</p>
 		<p class="tab1">
-			- &iquest;Cu&aacute;l es el significado de la expresi&oacute;n popular &ldquo;el hombre viene del mono&rdquo;?</p>
+			- &iquest;Cu&aacute;l creen que es el significado de la expresi&oacute;n popular &ldquo;el hombre viene del mono&rdquo;?</p>
 		<p class="tab1">
-			- &iquest;Cu&aacute;l fue la aportaci&oacute;n de Charles Robert Darwin a la ciencia? &iquest;C&oacute;mo podemos aplicar estos conocimientos al estudio del pasado?</p>
+			- &iquest;Cu&aacute;l fue el aporte de Charles Robert Darwin a la ciencia? &iquest;C&oacute;mo podemos aplicar estos conocimientos al estudio del pasado?</p>
 		<p class="tab1">
 			- &iquest;Cu&aacute;les son los or&iacute;genes del ser humano?</p>
 		<p class="cabecera2">
-			Despu&eacute;s del visionado</p>
+			Despu&eacute;s de la presentaci&oacute;n</p>
 		<p class="normal">
-			A continuaci&oacute;n, te sugerimos plantear a los alumnos una actividad consistente en la b&uacute;squeda de informaci&oacute;n sobre alguno de los hom&iacute;nidos: <span class="cursiva">Australopithecus</span>, <span class="cursiva">Homo habilis</span>, <span class="cursiva">Homo erectus, Homo neanderthalensis </span>u <span class="cursiva">Homo sapiens</span>. El objetivo es que en dicho estudio se haga menci&oacute;n a:</p>
+			Sugerimos plantear a los estudiantes una actividad de consulta sobre alguno de los hom&iacute;nidos: <span class="cursiva">Australopithecus</span>, <span class="cursiva">Homo habilis</span>, <span class="cursiva">Homo erectus</span>, <span class="cursiva">Homo neanderthalensis</span> u <span class="cursiva">Homo sapiens</span>, resaltando la siguiente informaci&oacute;n:</p>
 		<p class="tab1">
 			- Cronolog&iacute;a.</p>
 		<p class="tab1">
 			- Localizaci&oacute;n geogr&aacute;fica.</p>
 		<p class="tab1">
 			- Caracter&iacute;sticas.</p>
-		<p class="normal">
-			Puede servirles de ayuda el PDF adjunto <span class="cursiva">La difusi&oacute;n del g&eacute;nero humano</span>, en el que se muestra la localizaci&oacute;n de las principales especies del g&eacute;nero <span class="cursiva">homo </span>a lo largo del proceso de hominizaci&oacute;n.</p>
 		<div class="destacado">
-			Para ampliar la informaci&oacute;n aportada por el v&iacute;deo y mostrar de forma esquem&aacute;tica y visual en qu&eacute; consisti&oacute; el proceso de hominizaci&oacute;n, te proponemos trabajar con los alumnos el esquema evolutivo de los hom&iacute;nidos que ofrece la Gran Enciclopedia Planeta [<a href="/BCRedir.aspx?URL=/encyclopedia/asp/Preview11.asp?IdPack=11&amp;IdPildora=0022O401" target="_blank">ver</a>].</div>
+			P&iacute;dales a los estudiantes que consulten el esquema evolutivo de los hom&iacute;nidos que ofrece la Gran Enciclopedia Planeta <a href="http://ntic.educacion.es/w3/eos/MaterialesEducativos/mem2001/huellas/origenes/main.html" target="_blank">[</a><a href="http://ntic.educacion.es/w3/eos/MaterialesEducativos/mem2001/huellas/origenes/main.html" target="_blank">VER</a>], la p&aacute;gina Claves de la evoluci&oacute;n Humana, creada por el prestigioso Juan Luis Arsuaga y su equipo de la Universidad Complutense de Madrid <a href="http://ntic.educacion.es/w3/eos/MaterialesEducativos/mem2001/huellas/origenes/main.html" target="_blank">[VER]</a> y la p&aacute;gina sobre las huellas de nuestros or&iacute;genes, donde se ofrecen actividades y recursos para ampliar la informaci&oacute;n aportada por el video<a href="http://ntic.educacion.es/w3/eos/MaterialesEducativos/mem2001/huellas/origenes/main.html" target="_blank"> [VER]</a>.</div>
 		<div class="destacado">
-			Para completar los conocimientos de los alumnos sobre el tema, te recomendamos consultar esta p&aacute;gina sobre las huellas de nuestros or&iacute;genes, donde se ofrecen actividades y recursos para ampliar la informaci&oacute;n aportada por el v&iacute;deo [<a href="http://ntic.educacion.es/w3//eos/MaterialesEducativos/mem2001/huellas/origenes/main.html" target="_blank">ver</a>].</div>
+			&nbsp;</div>
 		<div class="destacado">
-			Si deseas encontrar m&aacute;s informaci&oacute;n sobre el proceso de hominizaci&oacute;n y las distintas especies de hom&iacute;nidos, te sugerimos consultar la p&aacute;gina Claves de la evoluci&oacute;n Humana, realizada por el prestigioso Juan Luis Arsuaga y su equipo de la Universidad Complutense de Madrid [<a href="http://ntic.educacion.es/w3//eos/MaterialesEducativos/mem/claves_evolucion_/index.html" target="_blank">ver</a>].</div>
-	</body></html>
+			Una vez que los estudiantes hayan realizado individualmente la consulta tem&aacute;tica permita que expongan los resultados, organizando grupos por tema. Sugi&eacute;rales que elaboren un esquema donde resalten las caracter&iacute;sticas del hom&iacute;nido escogido para que luego los expongan frente al curso.</div>
+		<p>
+			&nbsp;</p>
+		<p>
+			&nbsp;</p>
+	</body>
+</html>
