--- a/fuentes/visuales/grado06/guion02/guionAbierto/CS_06_02_CO_Recurso040/Alumno.html
+++ b/fuentes/visuales/grado06/guion02/guionAbierto/CS_06_02_CO_Recurso040/Alumno.html
@@ -1,30 +1,35 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<!-- v : 10.10.8 -->
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-	
-	
-	<title></title>
-	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-	
-	<SCRIPT SRC='../_js/common.js'></SCRIPT>			
-	
-	<link rel="stylesheet" type="text/css" href="../_css/common.css" />
-	
-</head>
-<body>
-		<p class="cabecera2">
-			El mundo durante el paleol&iacute;tico</p>
-		<p class="normal">
-			La aparici&oacute;n de los primeros humanos (2,5 millones de a&ntilde;os) marca el inicio del paleol&iacute;tico, que se extiende hasta el 10000 a.C.</p>
-		<p class="normal">
-			Paleol&iacute;tico significa &ldquo;piedra antigua&rdquo; y recibe este nombre porque las herramientas utilizadas durante este per&iacute;odo estaban hechas con <span class="negrita">piedra tallada</span>.</p>
-		<p class="normal">
-			Los hombres y mujeres de la &eacute;poca formaban peque&ntilde;os <span class="negrita">grupos n&oacute;madas </span>de <span class="negrita">cazadores-recolectores</span>. Esto significa que no permanec&iacute;an mucho tiempo en el mismo lugar, pues deb&iacute;an seguir las manadas de animales salvajes que cazaban. Los frutos que recog&iacute;an en el bosque completaban su alimentaci&oacute;n.</p>
-		<p class="normal">
-			Los grupos del paleol&iacute;tico sol&iacute;an buscar cobijo en <span class="negrita">cuevas</span>, <span class="negrita">grutas </span>y <span class="negrita">abrigos naturales</span>. All&iacute; establec&iacute;an su campamento, donde se dedicaban a fabricar utensilios de <span class="negrita">hueso </span>(agujas, punzones, etc.) y&nbsp;herramientas de <span class="negrita">s&iacute;lex </span>(cuchillos, hachas, puntas de flecha, etc.).</p>
-		<p class="normal">
-			Tambi&eacute;n confeccionaban su propia ropa&nbsp;con las pieles de los animales que cazaban. Las curt&iacute;an y, ayudados por agujas de hueso, cos&iacute;an las pieles con fibras vegetales y tendones&nbsp;de animales.</p>
-		<p class="normal">
-			El <span class="negrita">dominio del fuego </span>fue clave para la supervivencia de las comunidades del paleol&iacute;tico. El fuego permiti&oacute; cocinar los alimentos, protegerse del fr&iacute;o, ahuyentar a las bestias salvajes y tener luz en la oscuridad de la noche y en&nbsp;la caverna.</p>
-	</body></html>
+	<head>
+		<title></title>
+		<meta content="text/html; charset=iso-8859-1" http-equiv="Content-Type" />
+		<SCRIPT SRC='../_js/common.js'></SCRIPT>
+		<link href="../_css/common.css" rel="stylesheet" type="text/css" />
+	</head>
+	<body>
+		<p class="cabecera1">
+			El Paleol&iacute;tico</p>
+		<p>
+			El <span class="negrita">primer per&iacute;odo</span> de la Prehistoria es el <span class="negrita">Paleol&iacute;tico</span>.</p>
+		<p>
+			El Paleol&iacute;tico es el per&iacute;odo <span class="negrita">m&aacute;s largo</span> de la historia de la humanidad y el primero de la Prehistoria. Comenz&oacute; hace unos 2,5 millones de a&ntilde;os y su fin se sit&uacute;a en torno al 10.000 a.C.</p>
+		<p>
+			Paleol&iacute;tico significa &ldquo;piedra antigua&rdquo;, pues las herramientas y &uacute;tiles fabricados durante aquella etapa estaban hechos siguiendo la t&eacute;cnica de la piedra tallada.</p>
+		<p>
+			Las comunidades del Paleol&iacute;tico estaban formadas por cazadores-recolectores que llevaban una vida n&oacute;mada.</p>
+		<p>
+			Aquellos peque&ntilde;os grupos ocupaban cuevas y abrigos naturales, donde encontraban refugio y cobijo.</p>
+		<p>
+			El principal material utilizado para la fabricaci&oacute;n de herramientas era el s&iacute;lex, una variedad de cuarzo. Con &eacute;l creaban utensilios cortantes como cuchillos, hachas, puntas de lanza y flecha, raederas, raspadores, etc.</p>
+		<p>
+			Con <span class="negrita">s&iacute;lex</span> se cortaba la carne de los animales, los nervios y los tendones que serv&iacute;an a las sociedades del Paleol&iacute;tico para la confecci&oacute;n de ropa e instrumentos.</p>
+		<p>
+			El s&iacute;lex continu&oacute; utiliz&aacute;ndose durante el neol&iacute;tico en la fabricaci&oacute;n de herramientas para el campo. Con troncos curvados, resinas calentadas y lascas de este mineral construyeron las primeras hoces utilizadas para la siega.</p>
+		<p>
+			El <span class="negrita">hueso</span> era tambi&eacute;n un material muy &uacute;til a la hora de fabricar herramientas. Con &eacute;l se hac&iacute;an punzones y agujas destinadas a la confecci&oacute;n de ropas elaboradas con fibras vegetales y pieles.</p>
+		<p>
+			El fuego fue un elemento imprescindible en el desarrollo de las primeras comunidades humanas. Este se obten&iacute;a f&aacute;cilmente haciendo chocar entre s&iacute; una piedra de s&iacute;lex y pirita de hierro. Este avance permiti&oacute; a la humanidad cocinar los alimentos y, con ello, asimilarlos mejor.</p>
+		<p>
+			El fuego fue tambi&eacute;n un arma contra los depredadores y, seg&uacute;n se cree, permiti&oacute; el nacimiento de los primeros campamentos fuera de las cuevas.</p>
+	</body>
+</html>
