--- a/fuentes/visuales/grado06/guion02/guionAbierto/CS_06_02_CO_Recurso080/Alumno.html
+++ b/fuentes/visuales/grado06/guion02/guionAbierto/CS_06_02_CO_Recurso080/Alumno.html
@@ -1,28 +1,23 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<!-- v : 10.10.8 -->
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-	
-	
-	<title></title>
-	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-	
-	<SCRIPT SRC='../_js/common.js'></SCRIPT>			
-	
-	<link rel="stylesheet" type="text/css" href="../_css/common.css" />
-	
-</head>
-<body>
+	<head>
+		<title></title>
+		<meta content="text/html; charset=iso-8859-1" http-equiv="Content-Type" />
+		<SCRIPT SRC='../_js/common.js'></SCRIPT>
+		<link href="../_css/common.css" rel="stylesheet" type="text/css" />
+	</head>
+	<body>
 		<p class="cabecera2">
-			El mundo durante el neol&iacute;tico</p>
+			El Neol&iacute;tico</p>
 		<p>
-			El descubrimiento de la<span class="negrita"> agricultura </span>y<span class="negrita"> </span>la <span class="negrita">ganader&iacute;a&nbsp;</span>(10000 a.C.) marca el inicio del neol&iacute;tico, que se extiende hasta el 5000 a.C.</p>
+			El descubrimiento de la <span class="negrita">agricultura</span> y la <span class="negrita">ganader&iacute;a</span> (10.000 a.C.) marca el inicio del <span class="negrita">Neol&iacute;tico</span>, que se extiende hasta el 5.000 a.C.</p>
 		<p>
-			Neol&iacute;tico significa de forma literal &ldquo;piedra nueva&rdquo; y recibe este nombre porque las herramientas que se utilizaban pasaron de estar hechas con piedra tallada a estar hechas con <span class="negrita">piedra pulimentada</span>.</p>
+			Neol&iacute;tico significa literalmente &ldquo;piedra nueva&rdquo; y recibe este nombre porque las herramientas que se utilizaban pasaron de estar hechas con piedra tallada a estar hechas con piedra pulimentada.</p>
 		<p>
-			Los grupos humanos dejaron de ser n&oacute;madas y se hicieron sedentarios. Aparecieron entonces los <span class="negrita">primeros poblados permanentes</span>,&nbsp;a cuyo alrededor se situaban las tierras de cultivo y los cercados para los animales. Las primeras plantas cultivadas fueron los <span class="negrita">cereales </span>(trigo, cebada, etc.) y las <span class="negrita">legumbres </span>(lentejas, garbanzos, guisantes, etc.). En los cercados se guardaban <span class="negrita">cabras</span>, <span class="negrita">ovejas </span>y <span class="negrita">cerdos</span>. Adem&aacute;s, los hombres y mujeres del neol&iacute;tico tambi&eacute;n encontraron un nuevo compa&ntilde;ero: el <span class="negrita">perro</span>.</p>
+			Los grupos humanos dejaron de ser n&oacute;madas y se hicieron <span class="negrita">sedentarios</span>. Aparecieron entonces los primeros poblados permanentes, y a su alrededor se situaban las tierras de cultivo y los cercados para los animales. Las primeras plantas cultivadas fueron los cereales (trigo, cebada, etc.) y las legumbres (lentejas, garbanzos, guisantes, etc.). En los cercados se guardaban cabras, ovejas y cerdos. Se domestic&oacute; el perro.</p>
 		<p>
-			El descubrimiento de la agricultura y de la ganader&iacute;a permiti&oacute; que algunas personas se dedicaran a otras tareas &uacute;tiles para la comunidad. Aparecieron as&iacute; los primeros artesanos, quienes inventaron el <span class="negrita">huso&nbsp;</span>y el <span class="negrita">telar </span>para tejer, y fabricaron las primeras piezas de <span class="negrita">cer&aacute;mica</span>.</p>
+			El descubrimiento de la agricultura y de la ganader&iacute;a permiti&oacute; que algunas personas se dedicaran a otras tareas &uacute;tiles para la comunidad. Surge entonces la especializaci&oacute;n del trabajo. Aparecieron as&iacute; los primeros artesanos, quienes inventaron el huso y el telar para tejer y fabricaron las primeras piezas de cer&aacute;mica.</p>
 		<p>
-			Adem&aacute;s, la producci&oacute;n agr&iacute;cola permiti&oacute; poder dedicar una parte de la cosecha y de los animales criados al <span class="negrita">trueque</span>, primera forma de intercambio comercial.</p>
-	</body></html>
+			Adem&aacute;s, la producci&oacute;n agr&iacute;cola permiti&oacute; poder dedicar una parte de la cosecha y de los animales criados al trueque, primera forma de intercambio comercial.</p>
+	</body>
+</html>
