--- a/fuentes/visuales/grado06/guion02/guionAbierto/CS_06_02_CO_Recurso110/Alumno.html
+++ b/fuentes/visuales/grado06/guion02/guionAbierto/CS_06_02_CO_Recurso110/Alumno.html
@@ -1,36 +1,31 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<!-- v : 10.10.8 -->
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-	
-	
-	<title></title>
-	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-	
-	<SCRIPT SRC='../_js/common.js'></SCRIPT>			
-	
-	<link rel="stylesheet" type="text/css" href="../_css/common.css" />
-	
-</head>
-<body>
+	<head>
+		<title></title>
+		<meta content="text/html; charset=iso-8859-1" http-equiv="Content-Type" />
+		<SCRIPT SRC='../_js/common.js'></SCRIPT>
+		<link href="../_css/common.css" rel="stylesheet" type="text/css" />
+	</head>
+	<body>
 		<p class="cabecera2">
-			El mundo durante la edad de los metales</p>
-		<p class="normal">
-			El descubrimiento de la <span class="negrita">metalurgia </span>(5000 a.C.) marca el inicio de la edad de los metales, que se extiende hasta el 3500 a.C., aunque dependiendo de la zona, se alarg&oacute; hasta bien entrado el I milenio a.C.</p>
-		<p class="normal">
-			Este per&iacute;odo se caracteriz&oacute; por el descubrimiento y el uso de&nbsp;diferentes metales. El primero utilizado fue el <span class="negrita">cobre</span>. Despu&eacute;s se emple&oacute; el <span class="negrita">bronce</span>, una aleaci&oacute;n de cobre y esta&ntilde;o, y, por &uacute;ltimo, el <span class="negrita">hierro</span>, abundante y m&aacute;s resistente que los anteriores.</p>
-		<p class="normal">
+			El Neol&iacute;tico y la Edad de los Metales</p>
+		<p>
+			El descubrimiento de la metalurgia (5.000 a.C.) marca el inicio de la Edad de los Metales, que se extiende hasta el 3.500 a.C., aunque dependiendo de la zona, se alarg&oacute; hasta bien entrado el siglo I a.C.</p>
+		<p>
+			Este periodo se caracteriz&oacute; por el descubrimiento y el uso de diferentes metales. El primero que se utiliz&oacute; fue el cobre. Despu&eacute;s se emple&oacute; el bronce, una aleaci&oacute;n de cobre y esta&ntilde;o; por &uacute;ltimo, el hierro, abundante y m&aacute;s resistente que los anteriores.</p>
+		<p>
 			La metalurgia permiti&oacute; abandonar el uso de la piedra para la elaboraci&oacute;n de herramientas, armas y adornos. Para los fabricantes de utensilios era mucho m&aacute;s f&aacute;cil trabajar el metal y darle forma que tallar la piedra, que, adem&aacute;s, era menos resistente.</p>
-		<p class="normal">
-			El desarrollo de la&nbsp;agricultura, la ganader&iacute;a y las actividades artesanales permiti&oacute; aumentar los intercambios con pueblos y ciudades cada vez m&aacute;s alejados. Nac&iacute;a as&iacute; el <span class="negrita">comercio</span>.</p>
-		<p class="normal">
+		<p>
+			El desarrollo de la agricultura, la ganader&iacute;a y las actividades artesanales permiti&oacute; aumentar los intercambios con pueblos y ciudades lejanos. Nac&iacute;a as&iacute; el comercio.</p>
+		<p>
 			Adem&aacute;s, durante esta &eacute;poca se produjeron tres inventos de gran importancia:</p>
 		<p class="tab1">
-			- La <span class="negrita">rueda</span>: permiti&oacute; la construcci&oacute;n de carros tirados por animales.</p>
+			- La rueda: permiti&oacute; la construcci&oacute;n de carros tirados por animales.</p>
 		<p class="tab1">
-			- El <span class="negrita">arado</span>: permiti&oacute; hacer surcos en la tierra&nbsp;m&aacute;s profundos y de manera m&aacute;s r&aacute;pida.</p>
+			- El arado: permiti&oacute; hacer surcos en la tierra m&aacute;s profundos y de manera m&aacute;s r&aacute;pida.</p>
 		<p class="tab1">
-			- La <span class="negrita">vela</span>: permiti&oacute; aprovechar la energ&iacute;a del viento para impulsar las embarcaciones.</p>
-		<p class="normal">
-			Durante esta &eacute;poca, tambi&eacute;n se alzaron monumentos hechos con grandes bloques de piedra conocidos como <span class="negrita">megalitos</span>. Los m&aacute;s conocidos son el menhir, el dolmen y el cromlech.&nbsp;</p>
-	</body></html>
+			- La vela: permiti&oacute; aprovechar la energ&iacute;a del viento para impulsar las embarcaciones.</p>
+		<p>
+			Durante esta &eacute;poca, tambi&eacute;n se construyeron monumentos hechos con grandes bloques de piedra conocidos como megalitos. Los m&aacute;s conocidos son el menhir, el dolmen y el cromlech.</p>
+	</body>
+</html>
