--- a/fuentes/visuales/grado06/guion02/guionAbierto/CS_06_02_CO_Recurso130/Alumno.html
+++ b/fuentes/visuales/grado06/guion02/guionAbierto/CS_06_02_CO_Recurso130/Alumno.html
@@ -1,32 +1,27 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<!-- v : 10.10.8 -->
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-	
-	
-	<title></title>
-	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-	
-	<SCRIPT SRC='../_js/common.js'></SCRIPT>			
-	
-	<link rel="stylesheet" type="text/css" href="../_css/common.css" />
-	
-</head>
-<body>
+	<head>
+		<title></title>
+		<meta content="text/html; charset=iso-8859-1" http-equiv="Content-Type" />
+		<SCRIPT SRC='../_js/common.js'></SCRIPT>
+		<link href="../_css/common.css" rel="stylesheet" type="text/css" />
+	</head>
+	<body>
 		<p class="cabecera2">
-			La relaci&oacute;n entre arte y religi&oacute;n en la prehistoria</p>
+			Arte y religi&oacute;n en la Edad de Piedra</p>
 		<p class="normal">
-			El conjunto de pinturas, grabados y relieves que las comunidades prehist&oacute;ricas realizaron en el interior de cuevas y en abrigos naturales se conoce como <span class="negrita">arte rupestre</span>.</p>
+			El conjunto de pinturas, grabados y relieves que las comunidades prehist&oacute;ricas realizaron dentro de las cuevas y abrigos naturales se conoce como arte rupestre.</p>
 		<p class="normal">
-			Con <span class="negrita">pigmentos naturales </span>(distintas gamas de ocres, rojos, amarillos, as&iacute; como el negro y blanco) y con ayuda tanto de la mano como de peque&ntilde;as herramientas (bastoncillos, pinceles, etc.), se aprovechaba el relieve de la roca para representar distintas <span class="negrita">escenas </span>y <span class="negrita">figuras</span>.</p>
-		<p class="normal">
+			Con pigmentos naturales (distintas gamas de ocres, rojos, amarillos, as&iacute; como el negro y blanco) y con ayuda tanto de la mano como de peque&ntilde;as herramientas (bastoncillos, pinceles, etc.) se aprovechaba el relieve de la roca para representar distintas escenas y figuras.</p>
+		<p class="tab1">
 			Aunque se encuentran muestras de arte rupestre por toda Europa, este se concentr&oacute; en dos &aacute;reas concretas:</p>
 		<p class="tab1">
-			- <span class="negrita">Zona francocant&aacute;brica</span>: comprende la cornisa cant&aacute;brica, los Pirineos y el sur de Francia. Sus pinturas, halladas en el interior de las cuevas, se caracterizaban por la representaci&oacute;n de animales salvajes (caballos, bisontes, ciervos, etc.) en los que quedaba patente el dominio de la l&iacute;nea, el uso de distintos colores, el <span class="negrita">naturalismo </span>y el detalle. Destacan las cuevas de <span class="negrita">Altamira </span>(Cantabria) y <span class="negrita">Lascaux </span>(Francia).</p>
+			- <span class="negrita">Zona francocant&aacute;brica</span>: comprende la cornisa cant&aacute;brica, los Pirineos y el sur de Francia. Sus pinturas, halladas en las cuevas, se caracterizaban por la representaci&oacute;n de animales salvajes (caballos, bisontes, ciervos, etc.) en los que quedaba patente el dominio de la l&iacute;nea, el uso de distintos colores, el naturalismo y el detalle. Destacan las cuevas de Altamira (Cantabria) y Lascaux (Francia).</p>
 		<p class="tab1">
-			- <span class="negrita">Zona levantina</span>: comprende las serran&iacute;as del prelitoral mediterr&aacute;neo peninsular, desde Lleida hasta Almer&iacute;a. Sus l&iacute;mites interiores se sit&uacute;an en Cuenca, Teruel y Albacete. En abrigos rocosos y al aire libre se representaron escenas con sentido narrativo en las que el ser humano era el protagonista. Se utilizaron colores planos (rojo, negro y blanco). Las pinturas se hicieron m&aacute;s <span class="negrita">esquem&aacute;ticas </span>y din&aacute;micas. Destacan las pinturas de El Cogul (Lleida), la Gasulla (Castell&oacute;n) o Villar del Humo (Cuenca).</p>
+			- <span class="negrita">Zona levantina</span>: comprende las serran&iacute;as del prelitoral mediterr&aacute;neo peninsular, desde Lleida hasta Almer&iacute;a. Sus l&iacute;mites interiores se sit&uacute;an en Cuenca, Teruel y Albacete. En abrigos rocosos y al aire libre se representaron escenas con sentido narrativo en las que el ser humano era el protagonista. Se utilizaron colores planos como el rojo, el negro y el blanco. Las pinturas se hicieron m&aacute;s esquem&aacute;ticas y din&aacute;micas. Destacan las pinturas de El Cogul (Lleida), la Gasulla (Castell&oacute;n) o Villar del Humo (Cuenca).</p>
 		<p class="normal">
-			Se cree que el arte rupestre ten&iacute;a un <span class="negrita">car&aacute;cter m&aacute;gico</span>. Seg&uacute;n esta teor&iacute;a, los animales y chamanes disfrazados de animales representados tendr&iacute;an unas finalidades rituales. El objetivo ser&iacute;a invocar a los esp&iacute;ritus de la naturaleza para favorecer la caza y potenciar la fecundidad. Cuevas como Altamira y Lascaux se consideran aut&eacute;nticos santuarios.</p>
+			Se cree que el arte rupestre ten&iacute;a un car&aacute;cter m&aacute;gico. Seg&uacute;n esta teor&iacute;a, los animales y chamanes disfrazados de animales representados tendr&iacute;an unas finalidades rituales. El objetivo ser&iacute;a invocar a los esp&iacute;ritus de la naturaleza para favorecer la caza y potenciar la fecundidad. Cuevas como Altamira y Lascaux se consideran aut&eacute;nticos santuarios.</p>
 		<div class="destacado">
-			Si te interesa descubrir m&aacute;s acerca de las pinturas rupestres, te recomendamos hacer un recorrido virtual por la cueva francesa de Lascaux [<a href="http://www.lascaux.culture.fr/#/es/00.xml" target="_blank">ver</a>].</div>
-	</body></html>
+			Si te interesa descubrir m&aacute;s acerca de las pinturas rupestres, te recomendamos hacer un recorrido virtual por la cueva francesa de Lascaux [<a href="http://www.lascaux.culture.fr/#/es/00.xml" target="_blank">VER</a>].</div>
+	</body>
+</html>
