--- a/fuentes/visuales/grado06/guion02/guionAbierto/CS_06_02_CO_Recurso040/Profesor.html
+++ b/fuentes/visuales/grado06/guion02/guionAbierto/CS_06_02_CO_Recurso040/Profesor.html
@@ -1,48 +1,29 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<!-- v : 10.10.8 -->
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-	
-	
-	<title></title>
-	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-	
-	<SCRIPT SRC='../_js/common.js'></SCRIPT>			
-	
-	<link rel="stylesheet" type="text/css" href="../_css/common.css" />
-	
-</head>
-<body>
+	<head>
+		<title></title>
+		<meta content="text/html; charset=iso-8859-1" http-equiv="Content-Type" />
+		<SCRIPT SRC='../_js/common.js'></SCRIPT>
+		<link href="../_css/common.css" rel="stylesheet" type="text/css" />
+	</head>
+	<body>
 		<p class="cabecera1">
+			El Paleol&iacute;tico</p>
+		<p class="cabecera2">
 			Objetivo</p>
 		<p class="normal">
-			El siguiente&nbsp;v&iacute;deo permite que los alumnos conozcan no solo los l&iacute;mites cronol&oacute;gicos del paleol&iacute;tico, sino tambi&eacute;n d&oacute;nde y c&oacute;mo viv&iacute;an sus gentes, y de qu&eacute; modo se extendieron por el mundo.</p>
-		<p class="cabecera1">
-			Propuesta</p>
+			El video permite comprender la importancia que tuvieron los avances t&eacute;cnicos como la fabricaci&oacute;n de herramientas de piedra y el uso del fuego en el proceso de desarrollo de las comunidades humanas del Paleol&iacute;tico.</p>
 		<p class="cabecera2">
-			Despu&eacute;s del visionado</p>
-		<p class="normal">
-			Una vez los alumnos hayan visto el v&iacute;deo, te sugerimos plantear algunas cuestiones destinadas a asegurar la comprensi&oacute;n del mismo y a despejar las posibles dudas que puedan haberse planteado:</p>
+			Despu&eacute;s de la presentaci&oacute;n</p>
+		<p>
+			Plantear un debate en clase en torno a las siguientes tem&aacute;ticas:</p>
 		<p class="tab1">
-			- &iquest;En qu&eacute; continente aparecieron los primeros seres humanos? &iquest;Cu&aacute;ndo sucedi&oacute; esto?</p>
+			-Pida a los estudiantes que mencionen cu&aacute;les fueron los grandes avances t&eacute;cnicos durante el Paleol&iacute;tico, y que expliquen c&oacute;mo estos avances ayudaron a mejorar la vida de los hombres y mujeres del pasado (no hay por qu&eacute; limitarse al per&iacute;odo prehist&oacute;rico).</p>
 		<p class="tab1">
-			- &iquest;Qu&eacute; caminos tomaron&nbsp;nuestros antepasados para llegar&nbsp;a Europa y a Asia? &iquest;C&oacute;mo cre&eacute;is que cruzaron el estrecho de Gibraltar?</p>
-		<p class="tab1">
-			- &iquest;Qu&eacute; relaci&oacute;n ten&iacute;an los primeros humanos con la naturaleza a la hora de alimentarse o de vestirse?</p>
-		<p class="tab1">
-			- &iquest;Desarrollaron los primeros humanos&nbsp;alg&uacute;n tipo de tecnolog&iacute;a? &iquest;Qu&eacute; materiales utilizaban para fabricar sus herramientas?</p>
-		<p class="tab1">
-			- &iquest;Cu&aacute;l consider&aacute;is que podr&iacute;a ser la manifestaci&oacute;n art&iacute;stica m&aacute;s representativa del paleol&iacute;tico?</p>
-		<p class="normal">
-			Para acabar, puedes pedir a los alumnos que dibujen&nbsp;una escena de la vida cotidiana en el paleol&iacute;tico. Deber&iacute;an aparecer, al menos:</p>
-		<p class="tab1">
-			- Un individuo tallando piedra.</p>
-		<p class="tab1">
-			- Individuos cazando y recolectando.</p>
-		<p class="tab1">
-			-&nbsp;Una hoguera.</p>
-		<p class="tab1">
-			- Una cueva o abrigo donde cobijarse.</p>
-		<p class="tab1">
-			- Vestimentas propias de la &eacute;poca.&nbsp;</p>
-	</body></html>
+			-Prop&oacute;ngales para el debate la pregunta: &iquest;C&oacute;mo el desarrollo tecnol&oacute;gico facilita y mejora las condiciones de vida de las distintas sociedades?</p>
+		<div class="destacado">
+			Despu&eacute;s del debate puede pedirles que elaboren un texto explicativo en el que describan el proceso de fabricaci&oacute;n de las distintas herramientas, los materiales utilizados y su finalidad. Para estoa pueden ver el recurso que el Museo de la Ciencia y de la T&eacute;cnica de Terrassa ofrece al respecto [<a href="https://www.youtube.com/watch?v=-4kOt1cp12Q&amp;feature=related" target="_blank">VER</a>].</div>
+		<p>
+			Por &uacute;ltimo, y si pueden conseguir piedras de s&iacute;lex, podr&iacute;a completar el estudio del per&iacute;odo con una actividad pr&aacute;ctica que consiste en la fabricaci&oacute;n de una herramienta siguiendo la t&eacute;cnica utilizada hace miles de a&ntilde;os.</p>
+	</body>
+</html>
