--- a/fuentes/visuales/grado06/guion02/guionAbierto/CS_06_02_CO_Recurso110/Profesor.html
+++ b/fuentes/visuales/grado06/guion02/guionAbierto/CS_06_02_CO_Recurso110/Profesor.html
@@ -1,28 +1,22 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<!-- v : 10.10.8 -->
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-	
-	
-	<title></title>
-	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-	
-	<SCRIPT SRC='../_js/common.js'></SCRIPT>			
-	
-	<link rel="stylesheet" type="text/css" href="../_css/common.css" />
-	
-</head>
-<body>
+	<head>
+		<title></title>
+		<meta content="text/html; charset=iso-8859-1" http-equiv="Content-Type" />
+		<SCRIPT SRC='../_js/common.js'></SCRIPT>
+		<link href="../_css/common.css" rel="stylesheet" type="text/css" />
+	</head>
+	<body>
 		<p class="cabecera1">
+			El Neol&iacute;tico y la Edad de los Metales</p>
+		<p class="cabecera2">
 			Objetivo</p>
 		<p class="normal">
-			El siguiente&nbsp;v&iacute;deo permite mostrar a los alumnos los rasgos fundamentales de la edad de los metales en la pen&iacute;nsula Ib&eacute;rica, la importancia de la metalurgia para las sociedades de su tiempo y las distintas etapas en las que se divide el per&iacute;odo.</p>
-		<p class="cabecera1">
-			Propuesta</p>
+			Identificar los rasgos fundamentales de la Edad de los Metales en la Pen&iacute;nsula Ib&eacute;rica, la importancia de la metalurgia para las sociedades de su tiempo y las distintas etapas en las que se divide el per&iacute;odo.</p>
 		<p class="cabecera2">
-			Despu&eacute;s del visionado</p>
-		<p class="normal">
-			Una vez los alumnos hayan visto el v&iacute;deo, te sugerimos plantear algunas cuestiones destinadas a asegurar la comprensi&oacute;n del mismo y a despejar las posibles dudas que puedan haberse planteado:</p>
+			Despu&eacute;s de la presentaci&oacute;n</p>
+		<p>
+			Una vez los estudiantes hayan visto el video, plantee algunas preguntas para su comprensi&oacute;n y para despejar las posibles dudas que puedan tener:</p>
 		<p class="tab1">
 			- &iquest;Qu&eacute; es la metalurgia? &iquest;Qu&eacute; consecuencias tuvo su descubrimiento para la historia de la humanidad?</p>
 		<p class="tab1">
@@ -30,19 +24,22 @@
 		<p class="tab1">
 			- &iquest;Qu&eacute; tipo de herramientas se fabricaron con los metales? &iquest;Qu&eacute; diferencias exist&iacute;an con las de piedra?</p>
 		<p class="tab1">
-			- &iquest;C&oacute;mo cre&eacute;is que se fabricaban las herramientas de metal? &iquest;Cu&aacute;l pens&aacute;is que era el proceso que se segu&iacute;a?</p>
+			- &iquest;C&oacute;mo creen que se fabricaban las herramientas de metal? &iquest;Cu&aacute;l piensan que era el proceso que se segu&iacute;a?</p>
 		<p class="tab1">
-			- &iquest;Cre&eacute;is que el contacto con otros pueblos favorece la difusi&oacute;n del uso de los metales?</p>
-		<p class="normal">
-			Para acabar, puedes pedir a los alumnos que dibujen una escena de la vida cotidiana en la edad de los metales. Deber&iacute;an aparecer, al menos:</p>
+			- &iquest;Creen que el contacto con otros pueblos favorece la difusi&oacute;n del uso de los metales? &iquest;Por qu&eacute;?</p>
+		<p>
+			Para acabar, puede pedir a los estudiantes que dibujen una escena de la vida cotidiana en la Edad de los Metales. Deber&iacute;an aparecer, al menos:</p>
 		<p class="tab1">
 			- Un individuo trabajando el metal.</p>
 		<p class="tab1">
-			- Un individuo trabajando la tierra o cuidando del ganado.</p>
+			- Un individuo trabajando la/ tierra o cuidando del ganado.</p>
 		<p class="tab1">
 			- Tejedores, alfareros o cualquier otro artesano.</p>
 		<p class="tab1">
 			- Viviendas.</p>
 		<p class="tab1">
 			- Vestimentas propias de la &eacute;poca.</p>
-	</body></html>
+		<p>
+			&nbsp;</p>
+	</body>
+</html>
