--- a/fuentes/visuales/grado06/guion02/guionAbierto/CS_06_02_CO_Recurso130/Profesor.html
+++ b/fuentes/visuales/grado06/guion02/guionAbierto/CS_06_02_CO_Recurso130/Profesor.html
@@ -1,32 +1,26 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<!-- v : 10.10.8 -->
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-	
-	
-	<title></title>
-	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-	
-	<SCRIPT SRC='../_js/common.js'></SCRIPT>			
-	
-	<link rel="stylesheet" type="text/css" href="../_css/common.css" />
-	
-</head>
-<body>
+	<head>
+		<title></title>
+		<meta content="text/html; charset=iso-8859-1" http-equiv="Content-Type" />
+		<SCRIPT SRC='../_js/common.js'></SCRIPT>
+		<link href="../_css/common.css" rel="stylesheet" type="text/css" />
+	</head>
+	<body>
 		<p class="cabecera1">
+			Arte y religi&oacute;n en la Edad de Piedra</p>
+		<p class="cabecera2">
 			Objetivo</p>
 		<p class="normal">
-			Este v&iacute;deo ayudar&aacute; a los alumnos a conocer y comprender las connotaciones m&aacute;gicas del arte rupestre seg&uacute;n&nbsp;las comunidades prehist&oacute;ricas. A trav&eacute;s de la observaci&oacute;n de las distintas muestras, se podr&aacute;n percibir caracter&iacute;sticas y estilos.</p>
-		<p class="cabecera1">
-			Propuesta</p>
+			Permitir a los estudiantes conocer y comprender las connotaciones m&aacute;gicas del arte rupestre seg&uacute;n las comunidades prehist&oacute;ricas. A trav&eacute;s de la observaci&oacute;n de las distintas muestras, se podr&aacute;n identificar caracter&iacute;sticas y estilos.</p>
 		<p class="cabecera2">
-			Antes del visionado</p>
+			Antes de la presentaci&oacute;n</p>
 		<p class="normal">
-			Es&nbsp;habitual que las im&aacute;genes que asociamos a las diferentes &eacute;pocas hist&oacute;ricas vengan determinadas por el arte propio de su tiempo. Con el fin de determinar cu&aacute;les son las ideas que los alumnos tienen sobre el arte prehist&oacute;rico y, de forma m&aacute;s espec&iacute;fica sobre la pintura rupestre, te sugerimos plantear una serie de cuestiones:</p>
+			Es habitual que las im&aacute;genes que asociamos a las diferentes &eacute;pocas hist&oacute;ricas vengan determinadas por el arte propio de su tiempo. Con el fin de determinar cu&aacute;les son las ideas que los estudiantes tienen sobre el arte prehist&oacute;rico y, de forma m&aacute;s espec&iacute;fica, sobre la pintura rupestre, le sugerimos plantear las siguientes preguntas:</p>
 		<p class="tab1">
 			- &iquest;Con qu&eacute; fuentes contamos para conocer c&oacute;mo era la vida de la sociedades prehist&oacute;ricas?</p>
 		<p class="tab1">
-			- &iquest;Qu&eacute; tipo de manifestaciones art&iacute;sticas se dieron durante la prehistoria?</p>
+			- &iquest;Qu&eacute; tipo de manifestaciones art&iacute;sticas se dieron durante la Prehistoria?</p>
 		<p class="tab1">
 			- &iquest;A lo largo de la historia de la humanidad, qu&eacute; relaci&oacute;n ha existido entre el arte y las creencias de la sociedad?</p>
 		<p class="tab1">
@@ -36,9 +30,10 @@
 		<p class="tab1">
 			- &iquest;En qu&eacute; lugares suelen encontrarse muestras de arte prehist&oacute;rico?</p>
 		<p class="tab1">
-			- &iquest;Qu&eacute; tipo de arte desarrollaron los hombres&nbsp;y mujeres prehist&oacute;ricos? &iquest;Qu&eacute; t&eacute;cnicas utilizaron?</p>
+			- &iquest;Qu&eacute; tipo de arte desarrollaron los hombres y mujeres prehist&oacute;ricos? &iquest;Qu&eacute; t&eacute;cnicas utilizaron?</p>
 		<p class="cabecera2">
-			Despu&eacute;s del visionado</p>
+			Despu&eacute;s de la presentaci&oacute;n</p>
 		<p class="normal">
-			Para conocer mejor las caracter&iacute;sticas y el contexto en el que surgen las pinturas rupestres, te sugerimos hacer un recorrido virtual&nbsp;por&nbsp;la cueva de Lascaux, en Francia [<a href="http://www.lascaux.culture.fr/#/es/00.xml" target="_blank">ver</a>]. Esto te permitir&aacute; reforzar no solo los conocimientos de los alumnos, sino tambi&eacute;n estimular su capacidad de observaci&oacute;n y an&aacute;lisis.</p>
-	</body></html>
+			Para conocer mejor las caracter&iacute;sticas y el contexto en el que surgen las pinturas rupestres, le sugerimos hacer un recorrido virtual por la cueva de Lascaux, en Francia [<a href="http://www.lascaux.culture.fr/#/es/00.xml" target="_blank">VER</a>].</p>
+	</body>
+</html>
