--- a/fuentes/visuales/grado08/guion02/guionAbierto/CS_08_02_CO_Recurso170/Principal.html
+++ b/fuentes/visuales/grado08/guion02/guionAbierto/CS_08_02_CO_Recurso170/Principal.html
@@ -34,7 +34,7 @@
 	<script type="text/javascript" src="motor/js/motor.js"></script> 
 	<script src="motor/js/cepdamediainit.js" type="text/javascript"></script>
 
-	<title>Proyecto: Las características del caudillismo en América Latina</title>
+	<title>Proyecto: las características del caudillismo en América Latina</title>
 </head>
 <body>
 	<div id="topcontainer">
