--- a/fuentes/visuales/grado08/guion05/guionAbierto/CS_08_05_CO_Recurso140/Principal.html
+++ b/fuentes/visuales/grado08/guion05/guionAbierto/CS_08_05_CO_Recurso140/Principal.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html  lang="">
-    <head>
-        <meta charset="utf-8">
+<html lang="">
+    <head><meta charset="iso-8859-1">
+        
         <meta http-equiv="X-UA-Compatible" content="IE=10">
-        <title></title>
+        <title>Cambios sociales como consecuencia de la Revolución Industrial</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
@@ -82,7 +82,7 @@
 				<div id="mediaHolder" style="height:0px">
 				</div>
 				<canvas id="stage" width="950" height="608"></canvas>
-					<span  id="calculator"></span>
+					<span id="calculator"></span>
 			</div>
 		</div>
 
