--- a/fuentes/visuales/grado08/guion05/guionAbierto/CS_08_05_CO_Recurso080/Principal.html
+++ b/fuentes/visuales/grado08/guion05/guionAbierto/CS_08_05_CO_Recurso080/Principal.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html lang="">
-    <head><meta charset="iso-8859-1">
-        
+<html  lang="">
+    <head>
+        <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=10">
-        <title>Entiende la importancia del ferrocarril en la era industrial</title>
+        <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
@@ -84,7 +84,7 @@
 
 				</div>
 				<canvas id="stage" width="950" height="608"></canvas>
-				<span id="calculator"></span>
+				<span  id="calculator"></span>
 			</div>
 		</div>
     </body>
