--- a/fuentes/visuales/grado09/guion03/guionAbierto/CS_09_03_CO_Recurso210/Principal.html
+++ b/fuentes/visuales/grado09/guion03/guionAbierto/CS_09_03_CO_Recurso210/Principal.html
@@ -7,7 +7,7 @@
 	
 	<!--
 				MOTOR HTML M102ab
-				VERSION: 15.7.22.1
+				VERSION: 15.9.22.1
 	-->
 	
 	<script type="text/javascript" src="extlib/jquery/1_11_1/jquery_1_11_1_min.js"></script>
@@ -34,7 +34,7 @@
 	<script type="text/javascript" src="motor/js/motor.js"></script> 
 	<script src="motor/js/cepdamediainit.js" type="text/javascript"></script>
 
-	<title>Competencias: Regímenes políticos de América Latina en en el siglo XX</title>
+	<title>Competencias: regímenes políticos de América Latina en en el siglo XX</title>
 </head>
 <body>
 	<div id="topcontainer">
